openscholar/themes/cp_theme/css/cp_theme.css
/* ... */
a.tabledrag-handle .handle {
  background-image: url('../images/cp-sprite.png');
  background-position: 8px -15px;
}

a.tabledrag-handle-hover .handle {
  background-position: 8px -35px;
}

.delete-subtheme a {
  background: url('../images/cp-sprite.png') 0 -600px no-repeat;
  padding-left: 17px;
}

.zip-pull-button a {
  background: url('../images/cp-sprite.png') 0 -614px no-repeat #0a4476;
  padding: 15px 7px 8px 22px;
}

.git-pull-button a {
  background: url('../images/cp-sprite.png') 0 -645px no-repeat #0a4476;
  padding: 15px 7px 8px 22px;
}

form#cp-user-edit-membership-form .form-item-group-manager {
  margin: 15px 0 0;
}

h1.biblio-type-prefix {
  float: left;
  margin: 18px 10px 0px 0px;
  padding: 0.3em 0;
  color: #666;
  font-size: 18px;
  font-weight: normal;
}

.form-item-biblio-type select {
font-size: 18px;
color: #666;
}

.form-item-biblio-type span.form-required {
  visibility: hidden;
}

#field-biblio-extra-values thead tr th {
  text-transform: none;
}

/* Term tree reference */
.term-reference-tree {
  border: 1px solid #CCC;
  padding-left: 10px;
  padding-right: 10px;
}

.term-reference-tree > ul {
  margin-left: 0;
}

ul.term-reference-tree-level {
  list-style-type: none;
}

.term-reference-tree-button,
.no-term-reference-tree-button {
  float: left;
}

.no-term-reference-tree-button {
  background: none;
}

/** I think these aren't used anymore, but I'd need someone who remembers what they're used for to confirm
.term-reference-tree-button {
  background: url('../../os_basetheme/images/scholarbase-sprite.png') 2px -449px no-repeat;
}

.term-reference-tree-button.term-reference-tree-collapsed {
  background: url('../../os_basetheme/images/scholarbase-sprite.png') 6px -433px no-repeat;
}

.field-widget-og-vocab-complex .expand {
	 background: url('../../os_basetheme/images/scholarbase-sprite.png') 0 -509px no-repeat;
	 padding-left:14px;
}

.field-widget-og-vocab-complex .collapse {
	 background: url('../../os_basetheme/images/scholarbase-sprite.png') 0 -529px no-repeat;
	 padding-left:14px;
	 margin-left:10px;
}
 */

/* PUB FORM EXTERNAL URL SECTIONON */

#edit-url .form-item-biblio-url-title {
  margin-right:0;
  width: 138px;
}

#edit-url .form-item-biblio-url-title.editing {
  width: 195px;
}

#edit-url .form-item-biblio-url-title.editing #edit-biblio-url-title {
 text-align:right;
}

#edit-biblio-url-title {
	border:none;
	background: url('../images/cp-sprite.png') no-repeat 0 -475px #FFFFFF;
  padding-left:25px;
	color: #0074BD;
	text-decoration:underline;
  cursor:pointer;
}

#edit-biblio-url-title:focus {
  background: url('../../os_basetheme/images/form-input-bg.gif') repeat-x scroll left top #FFFFFF;
  border: 1px solid #CDCDCD;
  padding-left:0;
  color: #444;
text-decoration:none;
}


#edit-url .form-item-biblio-url .description {
	width: 450px;
}

.view-cp-content .form-item-vocab {
  float: left; /* LTR */
  margin-right: 20px; /* LTR */
}

.view-cp-content #edit-node-titles {
  clear: both;
}

.view-cp-content #edit-vocab {
  padding: 5px;
}

/** Message icon overrides */
div.status,
div.warning,
div.error {
  background-image: none;
}

div.messages:before {
  position: absolute;
  content: '';
  background-image: url('../../os_basetheme/images/scholarbase-sprite.png');
  height: 24px;
  width: 24px;
  top: 8px;
  left: 8px;
}

div.status:before {
  background-position: -38px -231px;
}

div.warning:before {
  background-position: -38px -262px;
}

div.error:before {
  background-position: -72px -231px;
}

/** Toolbar overrides */

#toolbar-home a span {
  background: url('../../os_basetheme/images/scholarbase-sprite.png') no-repeat 0 -845px;
}

#toolbar div.toolbar-menu a.toggle {
  background: url('../../os_basetheme/images/scholarbase-sprite.png') 0 -820px no-repeat;
}

#toolbar a.toggle {
  background-image: url('../../os_basetheme/images/scholarbase-sprite.png');
  background-position: 0px -859px;
}

.form-item-create-as-subsite {
  margin-bottom: 35px;
}

#toolbar a.toggle-active {
  background-position: -27px -859px;
}

#toolbar div.toolbar-menu ul li a[data-drawer] {
  background-image: none;
  position: relative;
}

#toolbar div.toolbar-menu ul li a[data-drawer]:after {
  content: '';
  background-image: url('../../os_basetheme/images/scholarbase-sprite.png');
  background-position: -16px -850px;
  position: absolute;
  width: 10px;
  height: 5px;
  margin: auto;
  top: 0;
  bottom: 0;
  right: 10px;
}

#toolbar div.toolbar-menu ul#toolbar-help li a {
  background-image: none;
  position: relative;
}

#toolbar div.toolbar-menu ul#toolbar-help li a:before {
  content: '';
  position: absolute;
  background-image: url('../../os_basetheme/images/scholarbase-sprite.png');
  background-position: 0 -885px;
  height: 15px;
  width: 15px;
  margin: auto;
  top: 0;
  bottom: 0;
  left: 10px;
}

/** End Toolbar Overrides */

/** Layout Form Overrides */

.widget-container a.edit {
  background-image: url("../images/cp-sprite.png");
  background-position: -12px -691px;
  width: 12px;
}

.widget-container a.edit:hover {
  background-image: url("../images/cp-sprite.png");
  background-position: 0px -691px;
}

#cp-layout-unused-widgets div.ctools-dropdown a.ctools-dropdown-link {
  background: none;
  position: relative;
}

#cp-layout-unused-widgets div.ctools-dropdown a.ctools-dropdown-link:before {
  content: '';
  position: absolute;
  background-image: url("../images/cp-sprite.png");
  background-position: -10px -452px;
  height: 15px;
  width: 15px;
  top: 0;
  left: -4px;
  background-repeat: no-repeat;
}

#edit-layout a.edit {
  background-image: url("../images/cp-sprite.png");
  background-position: 0 -675px;
}

#og-vocabulary-add-more-wrapper #edit-og-vocabulary-und .fieldset-wrapper {
  border: 1px solid #ccc;
  background: #f1f1f1;
  padding: 5px;
  width: 96%;
}

